fixed notes container overflow

--- a/src/components/song/NotesContainer.css
+++ b/src/components/song/NotesContainer.css
@@ -2,7 +2,7 @@
     position: absolute;
     right: 0;
     /*overflow: hidden;*/
-    height: 100%;
+    height: calc((100vh - 50px) - 460px);
     width: 49%;
     background: rgb(255, 255, 255);
     padding: 20px;
@@ -17,7 +17,7 @@
     position: absolute;
     right: 0;
     /*overflow: hidden;*/
-    height: 100%;
+    height: calc((100vh - 50px) - 460px);
     width: 98%;
     background: rgb(255, 255, 255);
     padding: 20px;
@@ -32,7 +32,7 @@
     position: absolute;
     right: 0;
     /*overflow: hidden;*/
-    height: 100%;
+    height: calc((100vh - 50px) - 460px)k;
     width: 0%;
     opacity: 0;
     background: rgb(255, 255, 255);
@@ -48,7 +48,7 @@
     position: absolute;
     right: 0;
     /*overflow: hidden;*/
-    height: 100%;
+    height: calc((100vh - 50px) - 460px);
     width: 0%;
     opacity: 0;
     background: rgb(255, 255, 255);
